<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Function FIRST</string>
    <string name="button_scout">SCOUT</string>
    <string name="button_about">ABOUT APP</string>
    <string name="text_appTitle">FUNCTION FIRST</string>
    <string name="text_appSubtitle">For the 2016 FRC Season: Stronghold</string>

    <string name="text_appVersion">Deployment Version 2</string>
    <string name="text_developerInfo">Designed by FIRST Team 701</string>

    <string name="text_tbaEventListTitle">2016 FRC Events</string>
    <string name="text_downloadEventListTitle">Downloaded Events</string>

    <string name="text_titleAbout">ABOUT FUNCTION FIRST</string>
    <string name="text_messageAbout">Function FIRST is an electronic FRC scouting application designed
        to analyze real statistical data on teams as they compete.  This version is designed for use with
        the 2016 FRC Season: . \nDesigned by Joseph A. Lewis . \nModified by Ben Aldrich  . \n- FIRST Team 701 </string>

    <string name="title_activity_event_list">Choose a FRC Event</string>
    <string name="text_titleConfirmDelete">Delete Event Data?</string>
    <string name="text_messageConfirmDelete">This will remove all event data from this device, including collected
        scouting data.  Are you sure you want to proceed?</string>
    <string name="text_titleAlreadyDownloaded">Event Already Downloaded</string>
    <string name="text_messageAlreadyDownloaded">This event already has existing data.  To reset all data,
        first delete this file from the downloaded list and then re-download the event.</string>
    <string name="text_titleProgress">Please wait&#8230;</string>
    <string name="text_messageProgressEventList">Accessing Event Lists&#8230;</string>
    <string name="text_messageProgressDownload">Downloading Event Data&#8230;</string>
    <string name="text_titleNoInternet">Turn on Internet Connection</string>
    <string name="text_messageNoInternet">Please turn on the internet connection to download an event.</string>

    <string name="title_activity_scout">ScoutActivity</string>
    <string name="text_ScoutInformation">Setup the Next Match</string>
    <string name="text_promptSpinnerDevice">Select a device to sort your data and auto-load the match and team number to scout from
        hard copy files that were downloaded when you downloaded the event.</string>
    <string-array name="deviceOptions">
        <item>Red 1</item>
        <item>Red 2</item>
        <item>Red 3</item>
        <item>Blue 1</item>
        <item>Blue 2</item>
        <item>Blue 3</item>
    </string-array>
    <string name="text_promptSpinnerMatch">Select a match that you would like to scout at this event.  Only change
        this value if you know that you need to go to a specific match (helpful for when matches are replayed or if
        you introduce a new device to the scouting system in the middle of a competition).</string>
    <string name="hint_editMatch">Enter a match number.</string>
    <string name="text_promptSpinnerTeam">Select a team to scout for this match.  Choose from any team at the event,
        as downloaded from The Blue Alliance when you downloaded the event.  Only change this value if it seems that the
        matchlist did not downloaded properly or you want to work without it.</string>
    <string name="button_startMatch">Start Match</string>

    <string name="title_activity_match">MatchActivity</string>
    <string name="title_initTab">Init Info</string>
    <string name="title_autoTab">Autonomous</string>
    <string name="title_teleTab">Tele-Op</string>
    <string name="title_postTab">Post Match</string>

    <string name="text_teamNumber">Team #</string>
    <string name="text_matchNumber">Match #</string>
    <string name="text_deviceNumber">Device #</string>

    <string name="cb_noShow">No Show</string>
    <string name="text_titleNoShow">Proceed to Next Match?</string>
    <string name="text_messageNoShow">Click OK to mark this robot as a no show and continue to the next match.</string>

    <string name="cb_hadAuto">Had Autonomous?</string>
    <string name="cb_reachesDefences">Reaches Defences?</string>
    <string name="text_crossesDefences">Crosses Defences? (Choose which Defence)</string>
    <string-array name="DefencesList1">
        <item>None</item>
        <item>Portcullis</item>
        <item>Cheval de Frise</item>
        <item>Moat</item>
        <item>Ramparts</item>
        <item>Drawbridge</item>
        <item>Sally Port</item>
        <item>Rock Wall</item>
        <item>Rough Terrain</item>
        <item>Low Bar</item>
    </string-array>
    <string name="text_BouldersScoredInLowGoal">Number of Boulders Scored in Low Goal</string>
    <string name="text_BouldersScoredInHighGoal">Number of Boulders Scored in High Goal</string>
    <string name="cb_endInAuto">Robot Ends in Auto Zone?</string>
    <string name="cb_hadOther">Robot had Other Autonomous?</string>

    <string name="text_fieldDescription">FIELD DIAGRAM</string>
    <string name="text_ChallengeState">Challenge State</string>
    <string name="text_PlaceHolder"> </string>
    <string name="text_Category1">Category 1</string>
    <string name="text_Category2">Category 2</string>
    <string name="text_Category3">Category 3</string>
    <string name="text_Category4">Category 4</string>
    <string name="text_ScaleState">Scale State</string>
    <string name="text_disableDefences">Disable Defences</string>

    <string name="text_titleDeleteStack">Delete This Stack?</string>
    <string name="text_messageDeleteStack">This will delete this stack from the saved data for the match.</string>
    <string name="text_titleEditStack">Edit Stack</string>

    <string name="text_numFouls">Number of Fouls Incurred by This Robot</string>
    <string name="cb_gotRedCard">Robot Received Red Card?</string>
    <string name="cb_gotYellowCard">Robot Received Yellow Card?</string>
    <string name="cb_wasDisabled">Was Disabled During Match?</string>
    <string name="cb_PlayedDefensively">Played Defensively</string>
    <string name="cb_PlayedAssistively">Played Assistively</string>
    <string name="rb_NotAttempted">Not Attempted</string>
    <string name="rb_Attempted">Attempted</string>
    <string name="rb_Successful">Successful</string>
    <string name="button_finish">Finish Match</string>
    <string name="cb_Captured">Captured</string>
    <string name="cb_Breached">Breached</string>
    <string name="text_numTechFouls">Number of Technical Fouls Incurred by This Robot</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <string name="match_scout">Match Scout</string>
    <string name="pit_scout">Pit Scout</string>

    <string name="pit_scout_question_1">How experienced are your drivers? (years for each driver)</string>
    <string name="pit_scout_question_2">How many cycles can you do?</string>
    <string name="pit_scout_question_3">Can you play defensively?</string>
    <string name="pit_scout_question_4">Does the robot shoot in the low goal or high goal?</string>
    <string name="pit_scout_question_5">Where do you prefer to shoot? (left side, middle, right side)+(distance from batter)</string>
    <string name="pit_scout_question_6">Do you have an autonomous, if so which defence do you start in front of?</string>
    <!--<string name="pit_scout_question_7">How many defences are you able to cross and what are they?</string>
    <string name="pit_scout_question_8">If you can cross the Portcullis or Cheval de Frise, in what way do you do it passive or active?</string>
    <string name="pit_scout_question_9">Can you manipulate the Sally Port or Drawbridge from the Neurtal Zone?</string> -->
    <string name="pit_scout_question_7"></string>
    <string name="pit_scout_question_8"></string>
    <string name="pit_scout_question_9"></string>
    <string name="send_data_via_bluetooth">Send Data Via Bluetooth</string>


</resources>
