<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AutoFragment"
    android:background="@color/DarkGreen"
    android:id="@+id/layout">
<!--
   <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_noShow"
        android:id="@+id/cb_noShow"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/Gold"
        android:typeface="serif"
        android:onClick="dialog_noShow"/>

        -->

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_hadAuto"
        android:id="@+id/cb_hadAuto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/Gold" />
       <!-- android:layout_below="@+id/cb_noShow" -->

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_reachesDefences"
        android:text="@string/cb_reachesDefences"
        android:textColor="@color/Gold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cb_hadAuto"
        android:layout_toEndOf="@+id/cb_hadAuto" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_crossesDefences"
        android:text="@string/text_crossesDefences"
        android:textColor="@color/Gold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cb_reachesDefences"
        android:layout_toEndOf="@+id/cb_reachesDefences" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_spybot"
        android:text="Starts as Spybot?"
        android:layout_below="@+id/cb_crossesDefences"
        android:textColor="@color/Gold"/>



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pickerViewAuto"
        android:layout_below="@+id/cb_spybot"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerDefences1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:entries="@array/DefencesList1"
                    android:textColor="@color/Black"/>

            <!--
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerDefences2"
                    android:layout_below="@+id/spinnerDefences1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:entries="@array/DefencesList1"/>
                                                    -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_BouldersScoredInLowGoal"
                    android:id="@+id/textBouldersInLowGoal"
                    android:textColor="@color/Gold"
                    android:layout_below="@+id/spinnerDefences1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <com.vandenrobotics.functionfirst.views.NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pickerBouldersInLowGoal"
                    android:orientation="horizontal"
                    android:layout_below="@+id/textBouldersInLowGoal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_BouldersScoredInHighGoal"
                    android:id="@+id/textBouldersInHighGoal"
                    android:textColor="@color/Gold"
                    android:layout_below="@+id/pickerBouldersInLowGoal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <com.vandenrobotics.functionfirst.views.NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pickerBouldersInHighGoal"
                    android:orientation="horizontal"
                    android:layout_below="@+id/textBouldersInHighGoal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_hadOther"
                    android:id="@+id/cb_hadOther"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/Gold"
                    android:layout_below="@+id/pickerBouldersInHighGoal"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
