<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TeleFragment"
    android:background="@color/DarkGreen"

    >


    <com.vandenrobotics.functionfirst.views.FieldDiagram
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:id="@+id/fieldDiagram"
        android:src="@drawable/ic_picture9"
        android:keepScreenOn="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/scrollViewDefences"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/scrollViewDefences" />
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/scrollViewDefences">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Low Bar"
                        android:gravity="center"
                        android:id="@+id/text_lowBar"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/picker_DamageCounterTele5"
                        android:layout_alignEnd="@+id/picker_DamageCounterTele5"
                        android:textColor="@color/Gold"/>

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_DamageCounterTele1"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom"
                        android:layout_below="@+id/text_lowBar"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/picker_DamageCounterTele5"
                        android:layout_alignEnd="@+id/picker_DamageCounterTele5" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_damageCounterTele1"
                        android:textColor="@color/Gold"
                        android:text="@string/text_Category1"
                        android:layout_alignLeft="@+id/picker_DamageCounterTele2"
                        android:layout_alignStart="@+id/picker_DamageCounterTele2"
                        android:layout_alignRight="@+id/picker_DamageCounterTele2"
                        android:layout_alignEnd="@+id/picker_DamageCounterTele2"
                        android:layout_above="@+id/button_damageCounterTele2"
                        android:layout_below="@+id/text_lowBar"
                        />

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_DamageCounterTele2"
                        android:orientation="horizontal"
                        android:layout_below="@+id/button_damageCounterTele1"
                        android:layout_toRightOf="@+id/picker_DamageCounterTele1"
                        android:layout_toEndOf="@+id/picker_DamageCounterTele1" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_damageCounterTele2"
                        android:text="@string/text_Category2"
                        android:textColor="@color/Gold"
                        android:layout_below="@+id/picker_DamageCounterTele1"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/picker_DamageCounterTele1"
                        android:layout_alignEnd="@+id/picker_DamageCounterTele1" />

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_DamageCounterTele3"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom"
                        android:layout_below="@+id/button_damageCounterTele2"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_damageCounterTele3"
                        android:text="@string/text_Category3"
                        android:textColor="@color/Gold"
                        android:layout_below="@+id/picker_DamageCounterTele2"
                        android:layout_toRightOf="@+id/button_damageCounterTele2"
                        android:layout_alignBottom="@+id/picker_DamageCounterTele3"
                        android:layout_alignRight="@+id/picker_DamageCounterTele2"
                        android:layout_alignEnd="@+id/picker_DamageCounterTele2" />

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_DamageCounterTele4"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom"
                        android:layout_below="@+id/picker_DamageCounterTele3"
                        android:layout_toRightOf="@+id/button_damageCounterTele4"
                        android:layout_toEndOf="@+id/button_damageCounterTele4" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_damageCounterTele4"
                        android:text="@string/text_Category4"
                        android:textColor="@color/Gold"
                        android:layout_below="@+id/picker_DamageCounterTele3"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/button_damageCounterTele3"
                        android:layout_toStartOf="@+id/button_damageCounterTele3" />

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_DamageCounterTele5"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom"
                        android:layout_below="@+id/button_damageCounterTele4"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_bouldersScoredInLowGoal"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/text_bouldersScoredInLowGoal"/>

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_bouldersScoredInHighGoal"
                        android:layout_below="@+id/text_bouldersScoredInHighGoal"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_bouldersScoredInLowGoal"
                        android:text="@string/text_BouldersScoredInLowGoal"
                        android:textColor="@color/Gold"
                        android:layout_below="@+id/picker_DamageCounterTele5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_bouldersScoredInHighGoal"
                        android:text="@string/text_BouldersScoredInHighGoal"
                        android:textColor="@color/Gold"
                        android:layout_below="@+id/picker_bouldersScoredInLowGoal"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_disableDefences"
                        android:textColor="@color/Gold"
                        android:id="@+id/cb_DisableDefences"
                        android:layout_alignBottom="@+id/text_lowBar"
                        android:layout_toRightOf="@+id/text_lowBar"
                        android:layout_toEndOf="@+id/text_lowBar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_bouldersBlockedFromLowGoal"
                        android:text="@string/text_bouldersBlockedFromLowGoal"
                        android:layout_below="@+id/picker_bouldersScoredInHighGoal"
                        android:textColor="@color/Gold"/>

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_bouldersBlockedFromLowGoal"
                        android:layout_below="@+id/text_bouldersBlockedFromLowGoal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_bouldersBlockedFromHighGoal"
                        android:text="@string/text_bouldersBlockedFromHighGoal"
                        android:layout_below="@+id/picker_bouldersBlockedFromLowGoal"
                        android:textColor="@color/Gold"/>

                    <com.vandenrobotics.functionfirst.views.NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/picker_bouldersBlockedFromHighGoal"
                        android:layout_below="@+id/text_bouldersBlockedFromHighGoal"/>


                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

</RelativeLayout>
